Functionality working properly. Will need to make some fine tuning on the networking side.

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT = 5000
+PORT = 5001
 DB = 'mongodb://localhost:27017'
-# DB = 'mongodb+srv://paaai:5iPc5VNPGfXxwxF6@cluster0.xfch9m1.mongodb.net/?retryWrites=true&w=majority
+CDB = 'mongodb+srv://paaai:5iPc5VNPGfXxwxF6@cluster0.xfch9m1.mongodb.net/?retryWrites=true&w=majority'
